// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Style Dictionary Library --directory should set right path names in \`style-dictionary.config.ts\` 1`] = `
"import { Config } from 'style-dictionary';

// If you need to add multiple configutations Config[] is supported
const config: Config | Config[] = {
  source: ['src/tokens/**/*.json'],
  platforms: {
    scss: {
      transformGroup: 'scss',
      buildPath: 'scss/',
      files: [
        {
          destination: '_variables.scss',
          format: 'scss/variables',
        },
      ],
    },
    android: {
      transformGroup: 'android',
      buildPath: 'android/',
      files: [
        {
          destination: 'font_dimens.xml',
          format: 'android/fontDimens',
        },
        {
          destination: 'colors.xml',
          format: 'android/colors',
        },
      ],
    },
    compose: {
      transformGroup: 'compose',
      buildPath: 'compose/',
      files: [
        {
          destination: 'StyleDictionaryColor.kt',
          format: 'compose/object',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.kt',
          format: 'compose/object',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
    ios: {
      transformGroup: 'ios',
      buildPath: 'ios/',
      files: [
        {
          destination: 'StyleDictionaryColor.h',
          format: 'ios/colors.h',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionaryColor.m',
          format: 'ios/colors.m',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.h',
          format: 'ios/static.h',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.m',
          format: 'ios/static.m',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
    'ios-swift': {
      transformGroup: 'ios-swift',
      buildPath: 'ios-swift/',
      files: [
        {
          destination: 'StyleDictionary+Class.swift',
          format: 'ios-swift/class.swift',
          className: 'StyleDictionaryClass',
          filter: {},
        },
        {
          destination: 'StyleDictionary+Enum.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionaryEnum',
          filter: {},
        },
        {
          destination: 'StyleDictionary+Struct.swift',
          format: 'ios-swift/any.swift',
          className: 'StyleDictionaryStruct',
          filter: {},
          options: {
            imports: 'SwiftUI',
            objectType: 'struct',
            accessControl: 'internal',
          },
        },
      ],
    },
    'ios-swift-separate-enums': {
      transformGroup: 'ios-swift-separate',
      buildPath: 'ios-swift/',
      files: [
        {
          destination: 'StyleDictionaryColor.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
  },
};

export default config;
"
`;

exports[`Style Dictionary Library --directory should set right path names in \`tsconfig.lib.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "style-dictionary.config.ts",
  ],
}
`;

exports[`Style Dictionary Library --preset complete should set right path names in \`style-dictionary.config.ts\` 1`] = `
"import { Config } from 'style-dictionary';

// If you need to add multiple configutations Config[] is supported
const config: Config | Config[] = {
  source: ['src/tokens/**/*.json'],
  platforms: {
    ios: {
      transformGroup: 'ios',
      buildPath: 'ios/Classes/Generated/',
      prefix: 'StyleDictionary',
      files: [
        {
          destination: 'StyleDictionarySize.h',
          format: 'ios/static.h',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.m',
          format: 'ios/static.m',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
        {
          destination: 'StyleDictionaryIcons.h',
          format: 'ios/strings.h',
          className: 'StyleDictionaryIcons',
          filter: {
            attributes: {
              category: 'content',
              type: 'icon',
            },
          },
        },
        {
          destination: 'StyleDictionaryIcons.m',
          format: 'ios/strings.m',
          className: 'StyleDictionaryIcons',
          filter: {
            attributes: {
              category: 'content',
              type: 'icon',
            },
          },
        },
        {
          destination: 'StyleDictionaryColor.h',
          format: 'ios/colors.h',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionaryColor.m',
          format: 'ios/colors.m',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionaryProperties.h',
          format: 'ios/singleton.h',
          className: 'StyleDictionaryProperties',
        },
        {
          destination: 'StyleDictionaryProperties.m',
          format: 'ios/singleton.m',
          className: 'StyleDictionaryProperties',
        },
      ],
    },

    android: {
      transformGroup: 'android',
      buildPath: 'android/styledictionary/src/main/res/values/',
      files: [
        {
          destination: 'style_dictionary_colors.xml',
          format: 'android/colors',
        },
        {
          destination: 'style_dictionary_font_dimens.xml',
          format: 'android/fontDimens',
        },
        {
          destination: 'style_dictionary_dimens.xml',
          format: 'android/dimens',
        },
        {
          destination: 'style_dictionary_integers.xml',
          format: 'android/integers',
        },
        {
          destination: 'style_dictionary_strings.xml',
          format: 'android/strings',
        },
      ],
    },
    'android-asset': {
      transformGroup: 'android',
      buildPath: 'android/styledictionary/src/main/',
      files: [
        {
          destination: 'assets/data/properties.json',
          format: 'json',
        },
      ],
      actions: ['copy_assets_files'],
    },
  },
};

export default config;
"
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "/libs/shared" should generate "shared-mylib" with project's root at "libs/shared/mylib": "/libs/shared" 1`] = `
Object {
  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
  "name": "shared-mylib",
  "projectType": "library",
  "root": "libs/shared/mylib",
  "sourceRoot": "libs/shared/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/libs/shared/mylib",
        "styleDictionaryConfig": "libs/shared/mylib/style-dictionary.config.ts",
        "tsConfig": "libs/shared/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "libs/shared/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "/packages" should generate "mylib" with project's root at "packages/mylib": "/packages" 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "mylib",
  "projectType": "library",
  "root": "packages/mylib",
  "sourceRoot": "packages/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/packages/mylib",
        "styleDictionaryConfig": "packages/mylib/style-dictionary.config.ts",
        "tsConfig": "packages/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "packages/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "/packages/shared" should generate "shared-mylib" with project's root at "packages/shared/mylib": "/packages/shared" 1`] = `
Object {
  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
  "name": "shared-mylib",
  "projectType": "library",
  "root": "packages/shared/mylib",
  "sourceRoot": "packages/shared/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/packages/shared/mylib",
        "styleDictionaryConfig": "packages/shared/mylib/style-dictionary.config.ts",
        "tsConfig": "packages/shared/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "packages/shared/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "/shared" should generate "shared-mylib" with project's root at "libs/shared/mylib": "/shared" 1`] = `
Object {
  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
  "name": "shared-mylib",
  "projectType": "library",
  "root": "libs/shared/mylib",
  "sourceRoot": "libs/shared/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/libs/shared/mylib",
        "styleDictionaryConfig": "libs/shared/mylib/style-dictionary.config.ts",
        "tsConfig": "libs/shared/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "libs/shared/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "libs" should generate "mylib" with project's root at "libs/mylib": "libs" 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "mylib",
  "projectType": "library",
  "root": "libs/mylib",
  "sourceRoot": "libs/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/libs/mylib",
        "styleDictionaryConfig": "libs/mylib/style-dictionary.config.ts",
        "tsConfig": "libs/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "libs/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should be able to resolve directory path based on the workspace layout when directory is "libs/shared" should generate "shared-mylib" with project's root at "libs/shared/mylib": "libs/shared" 1`] = `
Object {
  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
  "name": "shared-mylib",
  "projectType": "library",
  "root": "libs/shared/mylib",
  "sourceRoot": "libs/shared/mylib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nxkit/style-dictionary:build",
      "options": Object {
        "outputPath": "dist/libs/shared/mylib",
        "styleDictionaryConfig": "libs/shared/mylib/style-dictionary.config.ts",
        "tsConfig": "libs/shared/mylib/tsconfig.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "lint": Object {
      "executor": "@nx/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "libs/shared/mylib/**/*.{js,ts}",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`Style Dictionary Library --preset multiconfig should set right path names in \`style-dictionary.config.ts\` 1`] = `
"import { Config } from 'style-dictionary';

// If you need to add multiple configutations Config[] is supported
const config: Config | Config[] = [
  {
    source: ['src/tokens/brand-1/light/**/*.json'],
    platforms: {
      scss: {
        transformGroup: 'scss',
        buildPath: 'brand-1/light/scss/',
        files: [
          {
            destination: '_variables.scss',
            format: 'scss/variables',
          },
        ],
      },
      android: {
        transformGroup: 'android',
        buildPath: 'brand-1/light/android/',
        files: [
          {
            destination: 'font_dimens.xml',
            format: 'android/fontDimens',
          },
          {
            destination: 'colors.xml',
            format: 'android/colors',
          },
        ],
      },
      compose: {
        transformGroup: 'compose',
        buildPath: 'brand-1/light/compose/',
        files: [
          {
            destination: 'StyleDictionaryColor.kt',
            format: 'compose/object',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.kt',
            format: 'compose/object',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
      ios: {
        transformGroup: 'ios',
        buildPath: 'brand-1/light/ios/',
        files: [
          {
            destination: 'StyleDictionaryColor.h',
            format: 'ios/colors.h',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionaryColor.m',
            format: 'ios/colors.m',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.h',
            format: 'ios/static.h',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.m',
            format: 'ios/static.m',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
      'ios-swift': {
        transformGroup: 'ios-swift',
        buildPath: 'brand-1/light/ios-swift/',
        files: [
          {
            destination: 'StyleDictionary+Class.swift',
            format: 'ios-swift/class.swift',
            className: 'StyleDictionaryClass',
            filter: {},
          },
          {
            destination: 'StyleDictionary+Enum.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionaryEnum',
            filter: {},
          },
          {
            destination: 'StyleDictionary+Struct.swift',
            format: 'ios-swift/any.swift',
            className: 'StyleDictionaryStruct',
            filter: {},
            options: {
              imports: 'SwiftUI',
              objectType: 'struct',
              accessControl: 'internal',
            },
          },
        ],
      },
      'ios-swift-separate-enums': {
        transformGroup: 'ios-swift-separate',
        buildPath: 'brand-1/light/ios-swift/',
        files: [
          {
            destination: 'StyleDictionaryColor.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
    },
  },
  {
    source: ['src/tokens/brand-1/dark/**/*.json'],
    platforms: {
      scss: {
        transformGroup: 'scss',
        buildPath: 'brand-1/dark/scss/',
        files: [
          {
            destination: '_variables.scss',
            format: 'scss/variables',
          },
        ],
      },
      android: {
        transformGroup: 'android',
        buildPath: 'brand-1/dark/android/',
        files: [
          {
            destination: 'font_dimens.xml',
            format: 'android/fontDimens',
          },
          {
            destination: 'colors.xml',
            format: 'android/colors',
          },
        ],
      },
      compose: {
        transformGroup: 'compose',
        buildPath: 'brand-1/dark/compose/',
        files: [
          {
            destination: 'StyleDictionaryColor.kt',
            format: 'compose/object',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.kt',
            format: 'compose/object',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
      ios: {
        transformGroup: 'ios',
        buildPath: 'brand-1/dark/ios/',
        files: [
          {
            destination: 'StyleDictionaryColor.h',
            format: 'ios/colors.h',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionaryColor.m',
            format: 'ios/colors.m',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.h',
            format: 'ios/static.h',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.m',
            format: 'ios/static.m',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
      'ios-swift': {
        transformGroup: 'ios-swift',
        buildPath: 'brand-1/dark/ios-swift/',
        files: [
          {
            destination: 'StyleDictionary+Class.swift',
            format: 'ios-swift/class.swift',
            className: 'StyleDictionaryClass',
            filter: {},
          },
          {
            destination: 'StyleDictionary+Enum.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionaryEnum',
            filter: {},
          },
          {
            destination: 'StyleDictionary+Struct.swift',
            format: 'ios-swift/any.swift',
            className: 'StyleDictionaryStruct',
            filter: {},
            options: {
              imports: 'SwiftUI',
              objectType: 'struct',
              accessControl: 'internal',
            },
          },
        ],
      },
      'ios-swift-separate-enums': {
        transformGroup: 'ios-swift-separate',
        buildPath: 'brand-1/dark/ios-swift/',
        files: [
          {
            destination: 'StyleDictionaryColor.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionaryColor',
            filter: {
              attributes: {
                category: 'color',
              },
            },
          },
          {
            destination: 'StyleDictionarySize.swift',
            format: 'ios-swift/enum.swift',
            className: 'StyleDictionarySize',
            filter: {
              attributes: {
                category: 'size',
              },
            },
          },
        ],
      },
    },
  },
];

export default config;
"
`;

exports[`Style Dictionary Library should set right path names in \`style-dictionary.config.ts\` 1`] = `
"import { Config } from 'style-dictionary';

// If you need to add multiple configutations Config[] is supported
const config: Config | Config[] = {
  source: ['src/tokens/**/*.json'],
  platforms: {
    scss: {
      transformGroup: 'scss',
      buildPath: 'scss/',
      files: [
        {
          destination: '_variables.scss',
          format: 'scss/variables',
        },
      ],
    },
    android: {
      transformGroup: 'android',
      buildPath: 'android/',
      files: [
        {
          destination: 'font_dimens.xml',
          format: 'android/fontDimens',
        },
        {
          destination: 'colors.xml',
          format: 'android/colors',
        },
      ],
    },
    compose: {
      transformGroup: 'compose',
      buildPath: 'compose/',
      files: [
        {
          destination: 'StyleDictionaryColor.kt',
          format: 'compose/object',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.kt',
          format: 'compose/object',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
    ios: {
      transformGroup: 'ios',
      buildPath: 'ios/',
      files: [
        {
          destination: 'StyleDictionaryColor.h',
          format: 'ios/colors.h',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionaryColor.m',
          format: 'ios/colors.m',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.h',
          format: 'ios/static.h',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.m',
          format: 'ios/static.m',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
    'ios-swift': {
      transformGroup: 'ios-swift',
      buildPath: 'ios-swift/',
      files: [
        {
          destination: 'StyleDictionary+Class.swift',
          format: 'ios-swift/class.swift',
          className: 'StyleDictionaryClass',
          filter: {},
        },
        {
          destination: 'StyleDictionary+Enum.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionaryEnum',
          filter: {},
        },
        {
          destination: 'StyleDictionary+Struct.swift',
          format: 'ios-swift/any.swift',
          className: 'StyleDictionaryStruct',
          filter: {},
          options: {
            imports: 'SwiftUI',
            objectType: 'struct',
            accessControl: 'internal',
          },
        },
      ],
    },
    'ios-swift-separate-enums': {
      transformGroup: 'ios-swift-separate',
      buildPath: 'ios-swift/',
      files: [
        {
          destination: 'StyleDictionaryColor.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionaryColor',
          filter: {
            attributes: {
              category: 'color',
            },
          },
        },
        {
          destination: 'StyleDictionarySize.swift',
          format: 'ios-swift/enum.swift',
          className: 'StyleDictionarySize',
          filter: {
            attributes: {
              category: 'size',
            },
          },
        },
      ],
    },
  },
};

export default config;
"
`;

exports[`Style Dictionary Library should set right path names in \`tsconfig.lib.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "style-dictionary.config.ts",
  ],
}
`;
